Restructure vendor files. Update autoloader map again.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "autoload": {
         "psr-0": {
-            "Core": ""
+            "Core": "src/",
+            "Exception": "src/"
         }
     }
 }
